--- a/src/app/[locale]/dashboard/grammar/[id]/SingleGrammar.module.scss
+++ b/src/app/[locale]/dashboard/grammar/[id]/SingleGrammar.module.scss
@@ -44,3 +44,24 @@
     lg:h-[calc(100vh-97px-81px-32px)] lg:w-[calc(100vw-254px-32px)];
   }
 }
+
+.no-grammar {
+  @apply flex flex-col items-center justify-center h-[calc(100vh-397px-73px)] w-[calc(100vw-32px)]
+  sm:h-[calc(100vh-193px-81px)] 
+  md:h-[calc(100vh-153px-81px)] 
+  lg:h-[calc(100vh-97px-81px-32px)] lg:w-[calc(100vw-254px-32px)];
+
+  h3 {
+    @apply text-center text-lg font-bold text-blue-200 mb-2
+    sm:text-[2rem] sm:mb-4;
+  }
+
+  a {
+    @apply flex font-medium items-center justify-center bg-blue-200 text-white-100 px-3 py-1.5 rounded transition-all ease-in-out duration-300
+    hover:bg-purple-100;
+
+    svg {
+      @apply mr-2;
+    }
+  }
+}
