--- a/src/app/[locale]/dashboard/quiz/QuizPage.module.scss
+++ b/src/app/[locale]/dashboard/quiz/QuizPage.module.scss
@@ -70,4 +70,20 @@
     md:h-[calc(100vh-153px-81px)] 
     lg:h-[calc(100vh-97px-81px)] lg:w-[calc(100vw-254px-32px)];
   }
+
+  .no-page {
+    @apply flex flex-col items-center justify-center h-[calc(100vh-397px-73px)] 
+    sm:h-[calc(100vh-193px-81px)] 
+    md:h-[calc(100vh-153px-81px)] 
+    lg:h-[calc(100vh-97px-81px)] lg:w-[calc(100vw-254px-32px)];
+
+    h3 {
+      @apply text-2xl font-bold text-blue-200 mb-4;
+    }
+
+    a {
+      @apply flex font-medium items-center justify-center bg-blue-200 text-white-100 px-3 py-1.5 rounded transition-all ease-in-out duration-300
+      hover:bg-purple-100;
+    }
+  }
 }
