Fix styles on Dictionary word page

--- a/src/components/WordExamples/WordExamples.module.scss
+++ b/src/components/WordExamples/WordExamples.module.scss
@@ -1,5 +1,5 @@
 .examples-container {
-  @apply bg-[#F7F9FC] relative rounded-3xl;
+  @apply bg-[#F7F9FC] relative rounded-3xl shadow-md;
 
   .examples {
     @apply w-full px-2 py-4 
