--- a/src/app/[locale]/dictionary/[id]/DictionaryWord.module.scss
+++ b/src/app/[locale]/dictionary/[id]/DictionaryWord.module.scss
@@ -8,43 +8,47 @@
     @apply flex flex-col 
     lg:w-2/3;
 
-    .word {
-      @apply rounded-t-3xl bg-[#F7F9FC] p-6 justify-between flex flex-col gap-4 
-      md:p-6 md:gap-5;
+    > div {
+      @apply rounded-3xl shadow-md;
 
-      .heading {
-        @apply flex flex-col grid-cols-4 justify-between  
-        md:grid;
+      .word {
+        @apply rounded-t-3xl bg-[#F7F9FC] p-6 justify-between flex flex-col gap-4 
+        md:p-6 md:gap-5;
 
-        .word-section {
-          @apply text-lg my-auto font-bold leading-8 
-          sm:text-[28px];
+        .heading {
+          @apply flex flex-col grid-cols-4 justify-between  
+          md:grid;
+
+          .word-section {
+            @apply text-lg my-auto font-bold leading-8 
+            sm:text-[28px];
+          }
+
+          .btns {
+            @apply flex gap-2 
+            md:ml-auto;
+          }
         }
 
-        .btns {
-          @apply flex gap-2 
-          md:ml-auto;
+        .translation {
+          @apply flex items-center text-gray-100;
+
+          .flag {
+            @apply w-5 mr-4 
+            md:w-6;
+          }
         }
       }
 
-      .translation {
-        @apply flex items-center text-gray-100;
-
-        .flag {
-          @apply w-5 mr-4 
-          md:w-6;
-        }
+      .lang-parts {
+        @apply items-center gap-1.5 bg-[#F0F4FA] rounded-b-3xl py-2 px-4 font-medium flex flex-wrap 
+        md:py-3 md:px-6;
       }
-    }
-
-    .lang-parts {
-      @apply items-center gap-1.5 bg-[#F0F4FA] rounded-b-3xl py-2 px-4 font-medium flex flex-wrap 
-      md:py-3 md:px-6;
     }
 
     .meanings {
-      @apply rounded-lg mt-8
-      md:rounded-xl;
+      @apply rounded-3xl mt-8 shadow-md
+      md:rounded-3xl;
 
       .meaning-header {
         @apply flex justify-between bg-[#EBEEFF] items-center py-4 pl-4 rounded-t-3xl 
@@ -82,12 +86,20 @@
 
             .synonyms {
               @apply mt-7 flex gap-2 flex-wrap;
+
+              button {
+                @apply text-black mt-2 text-sm py-3 px-3 flex items-center rounded-2xl bg-[#C9F8E1] font-medium;
+
+                > span {
+                  @apply mt-[2px] h-[18px];
+                }
+              }
             }
           }
         }
 
         .exams {
-          @apply w-full;
+          @apply p-4 w-full;
         }
       }
     }
@@ -98,7 +110,7 @@
     lg:w-96;
 
     .examples {
-      @apply w-full px-2 py-4 bg-[#F7F9FC] rounded-3xl 
+      @apply w-full px-2 py-4 bg-[#F7F9FC] rounded-3xl  shadow-md
       sm:px-4 
       md:px-8 md:py-6;
 
