--- a/src/app/[locale]/dictionary/[id]/DictionaryWord.module.scss
+++ b/src/app/[locale]/dictionary/[id]/DictionaryWord.module.scss
@@ -31,7 +31,7 @@
         }
 
         .translation {
-          @apply flex items-center text-gray-100;
+          @apply flex items-center;
 
           .flag {
             @apply w-5 mr-4 
