--- a/src/components/WordCard/WordCard.module.scss
+++ b/src/components/WordCard/WordCard.module.scss
@@ -35,13 +35,25 @@
     }
 
     .part-of-speech {
-      @apply inline-block text-sm self-start font-bold bg-[#1ABC6A] text-[#fff] px-2 py-1 rounded-lg capitalize;
+      @apply inline-block text-sm self-start font-bold text-[#fff] px-2 py-1 rounded-lg capitalize;
     }
 
     p {
       @apply mb-2 text-justify w-full overflow-hidden font-medium text-base
       sm:text-lg
       xl:w-2/3;
+    }
+
+    .synonyms {
+      @apply flex gap-3;
+
+      button {
+        @apply text-black text-sm py-3 px-3 flex items-center rounded-2xl bg-[#C9F8E1] font-medium;
+
+        > span {
+          @apply mt-[2px] h-[18px];
+        }
+      }
     }
   }
 }
