--- a/src/app/[locale]/about-us/AboutUsPage.module.scss
+++ b/src/app/[locale]/about-us/AboutUsPage.module.scss
@@ -10,20 +10,6 @@
       @apply uppercase text-blue-400 text-sm mb-2 font-semibold text-center;
     }
 
-    h1 {
-      @apply text-center text-blue-150 mb-2 px-1 pt-6 text-[1.5rem] font-extrabold 
-      sm:text-2xl sm:w-3/4
-      md:text-[1.9rem] md:px-8 
-      xl:text-[2rem] 
-      2xl:text-[2.5rem];
-    }
-
-    p {
-      @apply pt-2 px-2 text-justify leading-7 text-blue-250 text-[1.2rem] font-medium 
-      sm:text-[1.3rem] sm:w-5/6 sm:px-0 sm:pt-6
-      md:px-8;
-    }
-
     div {
       @apply mt-12;
     }
@@ -51,7 +37,7 @@
 
     p {
       @apply mt-1 mb-4 text-blue-250 text-[1.2rem] leading-7 font-medium
-      sm:text-[18px] sm:pr-6;
+      sm:text-[18px];
     }
   }
 
@@ -62,4 +48,18 @@
       @apply md:text-center;
     }
   }
+}
+
+.title {
+  @apply text-center text-blue-150 mb-2 px-1 pt-6 text-[1.5rem] font-extrabold 
+  sm:text-2xl sm:w-3/4
+  md:text-[1.9rem] md:px-8 
+  xl:text-[2rem] 
+  2xl:text-[2.5rem];
+}
+
+.subtitle {
+  @apply pt-2 px-2 text-justify leading-7 text-blue-250 text-[1.2rem] font-medium
+  sm:text-[1.3rem] sm:px-0 sm:pt-6
+  md:px-12;
 }
