--- a/src/app/[locale]/contact-us/ContactUsPage.module.scss
+++ b/src/app/[locale]/contact-us/ContactUsPage.module.scss
@@ -6,14 +6,6 @@
 
   .left {
     @apply basis-1/2;
-
-    h1 {
-      @apply text-3xl text-blue-200 px-6 font-bold;
-    }
-
-    p {
-      @apply px-6 mb-2 pt-2 text-justify text-blue-125 text-base font-medium;
-    }
   }
 
   .form {
@@ -21,36 +13,44 @@
     sm:mt-0
     lg:pl-0
     xl:pl-12;
-
-    > div {
-      @apply bg-[#ffffffda] shadow-[0_.5rem_1rem_rgba(0,0,0,.15)] border-0 rounded-[20px] xl:p-24 sm:p-12 p-6 lg:m-0 overflow-hidden;
-
-      form {
-        div {
-          @apply mb-4;
-
-          label {
-            @apply block font-semibold mb-2;
-          }
-
-          input,
-          textarea {
-            @apply resize-none font-medium text-blue-350 opacity-90 px-3 py-1.5 rounded border border-grey-400 w-full;
-          }
-        }
-
-        button {
-          @apply px-3 rounded;
-        }
-
-        .error {
-          @apply text-red mt-1.5 text-sm;
-        }
-      }
-    }
   }
 }
 
 .correct {
   @apply border border-green-100 bg-green-100 text-white-100;
+}
+
+.title {
+  @apply text-3xl text-blue-200 px-6 font-bold mb-4;
+}
+
+.subtitle {
+  @apply px-6 mb-2 pt-2 text-justify text-blue-125 text-base font-medium;
+}
+
+.form-container {
+  @apply bg-[#ffffffda] shadow-[0_.5rem_1rem_rgba(0,0,0,.15)] border-0 rounded-[20px] xl:p-24 sm:p-12 p-6 lg:m-0 overflow-hidden;
+
+  form {
+    div {
+      @apply mb-4;
+
+      label {
+        @apply block font-semibold mb-2;
+      }
+
+      input,
+      textarea {
+        @apply resize-none font-medium text-blue-350 opacity-90 px-3 py-1.5 rounded border border-grey-400 w-full;
+      }
+    }
+
+    button {
+      @apply px-3 rounded;
+    }
+
+    .error {
+      @apply text-red mt-1.5 text-sm;
+    }
+  }
 }
