--- a/src/app/[locale]/mobile-app/MobileApp.module.scss
+++ b/src/app/[locale]/mobile-app/MobileApp.module.scss
@@ -10,30 +10,11 @@
       sm:pl-20 sm:pr-12  
       md:pr-6 md:text-left md:items-start;
 
-      h1 {
-        @apply text-lg mt-1 pb-4 text-black font-semibold mb-0   
-        xs:text-2xl
-        md:pb-0 
-        lg:text-[40px];
-
-        span {
-          @apply text-blue-100;
-
-          span {
-            @apply text-purple-100;
-          }
-        }
-      }
-
       img {
         @apply w-[90%] mb-4
         xs:w-[70%]
         sm:mt-6 sm:mb-5
         md:w-[60%];
-      }
-
-      p {
-        @apply text-lg font-medium text-black;
       }
 
       > div {
@@ -47,7 +28,7 @@
           hover:no-underline;
 
           button {
-            @apply w-full py-2 px-4 bg-grey-200 rounded-3xl justify-center items-center border-none h-12 flex
+            @apply w-full py-2 px-4 bg-[#F0F0F0] rounded-3xl justify-center items-center border-none h-12 flex
             hover:bg-grey-300;
 
             svg {
@@ -62,7 +43,7 @@
               }
 
               p {
-                @apply text-sm font-bold mb-0 mt-[-5px];
+                @apply text-black text-sm font-bold mb-0 mt-[-5px];
               }
             }
           }
@@ -168,12 +149,6 @@
 
     .slider {
       @apply w-full lg:w-1/3;
-
-      h3 {
-        @apply text-black text-base font-bold mb-0 
-        sm:text-lg 
-        lg:text-2xl;
-      }
     }
 
     > img {
@@ -199,20 +174,6 @@
       .image {
         @apply absolute h-[225px] w-[122px] right-[120px] top-[-24px]
         sm:h-[300px] sm:w-[168px] sm:top-[-30px] sm:right-[99px];
-      }
-    }
-  }
-
-  .review {
-    @apply pb-8 bg-white-200 pt-8 my-14 px-4;
-
-    > div {
-      @apply flex leading-6 flex-col items-center 
-      sm:mx-[-15px] 
-      lg:mx-0 lg:max-w-[1320px] lg:mx-auto;
-
-      h3 {
-        @apply text-center text-2xl font-bold mb-4;
       }
     }
   }
@@ -311,6 +272,45 @@
         xs:w-1/2
         md:hidden;
       }
+    }
+  }
+}
+
+.title {
+  @apply text-lg mt-1 pb-4 text-black font-semibold mb-0   
+  xs:text-2xl
+  md:pb-0 
+  lg:text-[40px];
+
+  span {
+    @apply text-blue-100;
+
+    span {
+      @apply text-purple-100;
+    }
+  }
+}
+
+.subtitle {
+  @apply text-lg font-medium text-black;
+}
+
+.features-title {
+  @apply text-black text-base font-bold mb-0 
+  sm:text-lg 
+  lg:text-2xl;
+}
+
+.review {
+  @apply pb-8 bg-white-200 pt-8 my-14 px-4;
+
+  > div {
+    @apply flex leading-6 flex-col items-center 
+    sm:mx-[-15px] 
+    lg:mx-0 lg:max-w-[1320px] lg:mx-auto;
+
+    h3 {
+      @apply text-center text-2xl font-bold mb-4;
     }
   }
 }
