--- a/src/components/Features/Features.module.scss
+++ b/src/components/Features/Features.module.scss
@@ -11,11 +11,6 @@
         @apply mr-2;
       }
     }
-
-    p {
-      @apply text-sm text-black mb-0 mt-5 font-medium 
-      lg:text-base;
-    }
   }
 
   .btns {
@@ -35,4 +30,9 @@
       lg:top-[calc(50%-37px)] lg:right-[90px];
     }
   }
+}
+
+.item-description {
+  @apply text-sm text-black mb-0 mt-5 font-medium 
+  lg:text-base;
 }
