--- a/src/app/[locale]/dashboard/grammar/[id]/SingleGrammar.module.scss
+++ b/src/app/[locale]/dashboard/grammar/[id]/SingleGrammar.module.scss
@@ -13,26 +13,26 @@
     @apply mt-5 text-blue-300;
   }
 
-  .examples {
-    h2 {
-      @apply my-3 font-bold text-lg text-blue-200  
-      md:text-2xl;
-    }
+  // .examples {
+  //   h2 {
+  //     @apply my-3 font-bold text-lg text-blue-200
+  //     md:text-2xl;
+  //   }
 
-    p {
-      @apply text-blue-300;
-    }
+  //   p {
+  //     @apply text-blue-300;
+  //   }
 
-    > ul {
-      @apply flex flex-col w-fit bg-white-200 rounded p-3 mt-2 border-l border-l-4 border-l-blue-200 text-blue-300;
-    }
-  }
+  //   > ul {
+  //     @apply flex flex-col w-fit bg-white-200 rounded p-3 mt-2 border-l border-l-4 border-l-blue-200 text-blue-300;
+  //   }
+  // }
 
   .test {
     @apply mt-7;
 
     a {
-      @apply border rounded bg-blue-200 py-2 px-4 font-bold text-white-100 transition-all ease-in-out duration-300 
+      @apply rounded bg-blue-200 py-2 px-4 font-bold text-white-100 transition-all ease-in-out duration-300 
       hover:bg-purple-100;
     }
   }
@@ -64,4 +64,17 @@
       @apply mr-2;
     }
   }
+}
+
+.example-title {
+  @apply my-3 font-bold text-lg text-blue-200  
+  md:text-2xl;
+}
+
+.example-description {
+  @apply text-blue-300;
+}
+
+.example-list {
+  @apply flex flex-col w-fit bg-white-200 rounded p-3 mt-2 border-l border-l-4 border-l-blue-200 text-blue-300;
 }
