--- a/src/app/[locale]/dashboard/grammar/grammarPage.module.scss
+++ b/src/app/[locale]/dashboard/grammar/grammarPage.module.scss
@@ -8,10 +8,6 @@
     @apply mb-6
     last:mb-0;
 
-    h2 {
-      @apply text-center text-xl font-bold text-blue-200 my-4
-      sm:text-2xl;
-    }
     .topics {
       @apply grid auto-rows-[10px] gap-5 grid-cols-1
       sm:grid-cols-2
@@ -99,4 +95,9 @@
     md:h-[calc(100vh-153px-81px)] 
     lg:h-[calc(100vh-97px-81px-32px)] lg:w-[calc(100vw-254px-32px)];
   }
+}
+
+.title {
+  @apply text-center text-xl font-bold text-blue-200 my-4
+  sm:text-2xl;
 }
