--- a/src/components/CollectionCard/CollectionCard.module.scss
+++ b/src/components/CollectionCard/CollectionCard.module.scss
@@ -23,11 +23,6 @@
           }
         }
 
-        button {
-          @apply stroke-black text-black flex items-center justify-center p-2 rounded-2xl bg-[#F0F0F0] transition-all ease-in-out duration-150
-          hover:bg-purple-100 hover:text-white-100 hover:stroke-white-100 hover:fill-white-100;
-        }
-
         .active {
           @apply bg-blue-200 text-white-100 stroke-white-100 fill-white-100;
         }
@@ -63,4 +58,9 @@
       hover:bg-purple-100 hover:text-white-100;
     }
   }
+}
+
+.button-bookmark {
+  @apply stroke-black text-black flex items-center justify-center p-2 rounded-2xl bg-[#F0F0F0] transition-all ease-in-out duration-150
+  hover:bg-purple-100 hover:text-white-100 hover:stroke-white-100 hover:fill-white-100;
 }
