--- a/src/components/WordsTable/WordsTable.module.scss
+++ b/src/components/WordsTable/WordsTable.module.scss
@@ -5,8 +5,9 @@
     @apply origin-center -rotate-180;
 
     .table-data {
-      @apply h-[calc(100vh-150px)] w-full min-w-[calc(100vw-30px)]   
-      lg:h-[calc(100vh-245px)] lg:min-w-[calc(100vw-290px)];
+      // h-[calc(100vh-150px)] lg:h-[calc(100vh-245px)]
+      @apply w-full min-w-[calc(100vw-30px)]   
+       lg:min-w-[calc(100vw-290px)];
 
       .header {
         @apply bg-blue-200 text-white-100 text-base;
@@ -43,12 +44,12 @@
           @apply invisible rounded-lg shadow-[0_.5rem_1rem_rgba(0,0,0,.15)] bg-white-100 p-2 absolute bottom-[5px] left-[5px] w-[60px] h-[33px];
         }
       }
-
-      .no-words {
-        @apply flex items-center text-blue-200 justify-center h-[calc(100vh-150px)] w-[calc(100vw-30px)] 
-        text-2xl font-bold text-center
-        lg:w-[calc(100vw-290px)] lg:h-[calc(100vh-245px)];
-      }
     }
   }
+}
+
+.no-words {
+  @apply flex items-center text-blue-200 justify-center h-[calc(100vh-150px)] w-[calc(100vw-30px)] 
+  text-2xl font-bold text-center
+  lg:w-[calc(100vw-290px)] lg:h-[calc(100vh-245px)];
 }
