Fixed small UI bugs connected with themes

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -51,7 +51,7 @@
 
 .footer-right {
   @apply flex flex-col items-center text-blue-200 
-  sm:items-start sm:flex-row sm:pl-2 
+  sm:items-center sm:flex-row sm:pl-2 
   md:items-center 
   2xl:mr-2.5;
 
