--- a/src/components/Burger/Burger.module.scss
+++ b/src/components/Burger/Burger.module.scss
@@ -66,11 +66,11 @@
         }
 
         .dropdown {
-          @apply self-start invisible;
+          @apply self-start hidden;
         }
 
         .dropdown-active {
-          @apply visible;
+          @apply block;
         }
 
         .dropdown-btn {
@@ -78,8 +78,7 @@
         }
 
         &:last-of-type {
-          @apply cursor-pointer flex-col
-          [&_svg]:hover:text-purple-100;
+          @apply flex-col;
         }
       }
     }
