--- a/src/components/UserModal/UserModal.module.scss
+++ b/src/components/UserModal/UserModal.module.scss
@@ -1,5 +1,5 @@
 .user {
-  @apply hidden items-center cursor-pointer relative
+  @apply hidden items-center  relative
   [&_div]:hover:visible [&_div]:hover:opacity-100
   lg:flex;
 
@@ -15,24 +15,31 @@
     @apply flex-col rounded-lg shadow-[0_.5rem_1rem_rgba(0,0,0,.15)] bg-white-100 w-[160px] h-[80px] py-2;
 
     li {
-      @apply px-4 py-1 flex items-center text-blue-200 font-medium cursor-pointer
-      hover:text-purple-100 [&_svg]:hover:fill-purple-100;
+      @apply px-4 py-1 flex items-center text-blue-200 font-medium;
 
-      a {
-        @apply flex items-center transition-all ease-in-out duration-150;
+      a,
+      span {
+        @apply cursor-pointer flex items-center transition-all ease-in-out duration-150;
       }
     }
 
     li:not(.selected) {
-      @apply hover:text-purple-100;
+      a,
+      span {
+        @apply [&_svg]:hover:fill-purple-100 hover:text-purple-100;
+      }
+    }
+
+    .selected {
+      @apply cursor-default opacity-50;
     }
   }
 }
 
 .user-avatar {
-  @apply rounded-full bg-blue-200 w-10 h-10 flex items-center justify-center;
+  @apply rounded-full bg-blue-200 w-10 h-10 flex items-center justify-center cursor-pointer;
 }
 
-.icon {
+.link-icon {
   @apply transition-all ease-in-out duration-150 fill-blue-200;
 }
