--- a/src/components/WordDefinition/WordDefinition.module.scss
+++ b/src/components/WordDefinition/WordDefinition.module.scss
@@ -26,10 +26,6 @@
   &:last-child {
     @apply border-b;
   }
-
-  .word-modal {
-    @apply invisible rounded-lg shadow-[0_.5rem_1rem_rgba(0,0,0,.15)] bg-white-100 p-2 absolute bottom-[5px] left-[5px] w-[60px] h-[33px] opacity-0 duration-[.3s];
-  }
 }
 
 .modal {
@@ -39,7 +35,7 @@
   xl:h-[calc(100vh-275px)];
 
   .col-1 {
-    @apply flex flex-col;
+    @apply flex flex-col w-full;
 
     > div {
       @apply rounded-3xl shadow-md;
@@ -70,6 +66,34 @@
       .lang-parts {
         @apply items-center gap-1.5 bg-[#F0F4FA] rounded-b-3xl py-2 px-4 font-medium flex flex-wrap 
         md:py-3 md:px-6;
+      }
+    }
+  }
+}
+
+.word-modal {
+  @apply flex items-start justify-start gap-2;
+}
+
+.delete-modal {
+  @apply sm:h-[200px] sm:w-[475px] sm:self-center sm:justify-self-center;
+
+  > div {
+    @apply flex flex-col items-center h-full justify-center;
+  }
+
+  .delete {
+    @apply flex flex-col justify-center items-center;
+
+    h6 {
+      @apply text-xl text-center font-bold mb-5 mt-[-35px];
+    }
+
+    .btns {
+      @apply grid grid-cols-2 w-full gap-4;
+
+      button {
+        @apply rounded-lg;
       }
     }
   }
