Added modal after completing quiz

--- a/src/app/[locale]/dashboard/quiz/[id]/SingleQuiz.module.scss
+++ b/src/app/[locale]/dashboard/quiz/[id]/SingleQuiz.module.scss
@@ -58,5 +58,5 @@
 }
 
 .modal-title {
-  @apply text-lg text-center font-bold text-blue-200;
+  @apply text-xl text-center font-bold text-blue-200 mb-3;
 }
