--- a/src/app/[locale]/about-us/AboutUsPage.module.scss
+++ b/src/app/[locale]/about-us/AboutUsPage.module.scss
@@ -28,7 +28,7 @@
     md:px-12;
 
     h2 {
-      @apply text-left text-blue-150 leading-8 mb-5 px-1 pt-6 text-3xl font-bold 
+      @apply text-left text-blue-150 leading-8 mb-5 px-1 pt-6 text-3xl font-bold  
       sm:text-[1.8rem] sm:text-left sm:px-0
       md:text-[1.9rem] md:pt-0 md:mb-12
       xl:text-[2rem] 
@@ -62,4 +62,9 @@
   @apply pt-2 px-2 text-justify leading-7 text-blue-250 text-[1.2rem] font-medium
   sm:text-[1.3rem] sm:px-0 sm:pt-6
   md:px-12;
+}
+
+// opportunity to solve className issues for dark mode
+:global(.dark) .container section h2 {
+  @apply text-[#009CF3];
 }
