--- a/src/app/[locale]/dashboard/quiz/QuizPage.module.scss
+++ b/src/app/[locale]/dashboard/quiz/QuizPage.module.scss
@@ -36,15 +36,19 @@
         xl:grid-cols-3;
       }
 
-      .lists {
-        @apply grid gap-4 grid-cols-auto-fill-140;
-      }
-
       .no-list {
         @apply min-h-[calc(100vh-72px-352px)] flex items-center justify-center text-2xl font-bold text-gray-300
         sm:min-h-[calc(100vh-223px-192px)]
         md:min-h-[calc(100vh-223px-152px)]
         lg:min-h-[calc(100vh-223px-96px)];
+      }
+
+      .vocabulary-quiz {
+        @apply flex flex-col gap-4;
+
+        .items {
+          @apply grid gap-4 grid-cols-auto-fill-140;
+        }
       }
     }
   }
