--- a/src/components/WordModal/AddEditDefinitionForm/AddEditDefinitionForm.module.scss
+++ b/src/components/WordModal/AddEditDefinitionForm/AddEditDefinitionForm.module.scss
@@ -96,6 +96,10 @@
         @apply m-0 bg-blue-200 text-white-100 font-bold h-[38px] rounded-lg transition-all duration-[.3s] ease-in-out
         hover:bg-purple-100;
       }
+
+      .reset {
+        @apply bg-transparent border border-solid border-blue-200 text-blue-200 p-[7px] hover:border-red hover:text-red hover:bg-transparent;
+      }
     }
   }
 
