Fix: Styles for cancel button

--- a/src/components/WordModal/AddEditDefinitionForm/AddEditDefinitionForm.module.scss
+++ b/src/components/WordModal/AddEditDefinitionForm/AddEditDefinitionForm.module.scss
@@ -98,7 +98,7 @@
       }
 
       .reset {
-        @apply bg-transparent border border-solid border-blue-200 text-blue-200 p-[7px] hover:border-red hover:text-red hover:bg-transparent;
+        @apply bg-transparent border border-solid border-blue-200 text-blue-200 hover:border-red hover:text-red hover:bg-transparent;
       }
     }
   }
