--- a/src/components/UserModal/UserModal.module.scss
+++ b/src/components/UserModal/UserModal.module.scss
@@ -1,5 +1,5 @@
 .user {
-  @apply hidden items-center  relative
+  @apply hidden items-center relative ml-2
   [&_div]:hover:visible [&_div]:hover:opacity-100
   lg:flex;
 
