Fix: Updated styles for dark theme

--- a/src/app/[locale]/contact-us/ContactUsPage.module.scss
+++ b/src/app/[locale]/contact-us/ContactUsPage.module.scss
@@ -21,7 +21,7 @@
 }
 
 .form-container {
-  @apply bg-[#ffffffda] shadow-[0_.5rem_1rem_rgba(0,0,0,.15)] border-0 rounded-[20px] xl:p-24 sm:p-12 p-6 lg:m-0 overflow-hidden;
+  @apply bg-[#ffffffda] shadow-[0_.5rem_1rem_rgba(0,0,0,.15)] border-0 rounded-[20px] mb-24 xl:p-24 sm:p-12 p-6 overflow-hidden;
 
   form {
     div {
