--- a/src/app/[locale]/pricing/PricingPage.module.scss
+++ b/src/app/[locale]/pricing/PricingPage.module.scss
@@ -3,7 +3,7 @@
   2xl:max-w-[1320px] 2xl:mx-auto;
 
   .top {
-    @apply flex leading-6 pt-10 relative mx-auto flex flex-col items-center justify-center py-2;
+    @apply flex leading-6 pt-10 relative mx-auto flex-col items-center justify-center py-2;
 
     > div {
       @apply mb-14 w-full flex items-center flex-col gap-10 justify-center
