--- a/src/app/[locale]/dashboard/profile/ProfilePageRenamed.module.scss
+++ b/src/app/[locale]/dashboard/profile/ProfilePageRenamed.module.scss
@@ -28,7 +28,7 @@
       @apply mt-4 grid grid-cols-1 gap-4 
       sm:grid-cols-2 
       md:grid-cols-3 
-      xl:grid-cols-4;
+      xl:grid-cols-[repeat(auto-fill,minmax(250px,1fr))];
     }
   }
 
